# lore-stack

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml
.agents/: backlog.md
.github/workflows/: release.yml
config/: compose.toml  config-pg.toml  local.toml
docs/: design.md
docs/review/: findings-codex.md  review-request.md
lore-pg/: Cargo.toml  REWRITE.md
lore-pg/src/: lib.rs  tls.rs
lore-pg/src/store/: immutable_store.rs  mod.rs  pg_immutable_store.rs  pg_lock_store.rs  pg_mutable_store.rs
overlay/: pg.rs
scripts/: build.sh  compose-up.sh  local-down.sh  local-up.sh
